--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,11 @@
-<h2 class="text-3xl font-bold mb-4 text-blue-700"><%= @product.name %></h2>
-
-<p class="text-xl font-semibold mb-2 text-gray-800">
-  Цена: <span class="text-blue-600"><%= number_to_currency(@product.price, unit: "₽") %></span>
-</p>
-
-<p class="text-gray-700 mb-4"><%= @product.description %></p>
-
-<p class="italic text-sm text-gray-500 mb-6">
-  Категория: <%= @product.category&.name || "Без категории" %>
-</p>
-
-<%= link_to "← Назад", root_path, class: "text-blue-600 hover:underline font-medium" %>
+<div class="max-w-4xl mx-auto p-4">
+  <h2 class="text-3xl font-bold mb-4 text-blue-700 md:text-2xl"><%= @product.name %></h2>
+  <p class="text-xl font-semibold mb-2 text-gray-800 md:text-lg">
+    Цена: <span class="text-blue-600"><%= number_to_currency(@product.price, unit: "₽") %></span>
+  </p>
+  <p class="text-gray-700 mb-4 line-clamp-4"><%= @product.description %></p>
+  <p class="italic text-sm text-gray-500 mb-6">
+    Категория: <%= @product.category&.name || "Без категории" %>
+  </p>
+  <%= link_to "← Назад", root_path, class: "text-blue-600 hover:underline font-medium" %>
+</div>
