--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -1,36 +1,36 @@
-<h1>Ваша корзина</h1>
+<div class="container my-5">
+  <h1 class="mb-4 text-center">Ваша корзиночка</h1>
 
-<% if @products.empty? %>
-  <p>Корзина пуста.</p>
-<% else %>
-  <table>
-    <thead>
-    <tr>
-      <th>Название</th>
-      <th>Количество</th>
-      <th>Цена за шт.</th>
-      <th>Итого</th>
-      <th>Действия</th>
-    </tr>
-    </thead>
-    <tbody>
-    <% @products.each do |product| %>
-      <% quantity = session[:cart][product.id.to_s] %>
+  <% if @cart.empty? %>
+    <div class="alert alert-info text-center">Ваша корзина пуста.</div>
+  <% else %>
+    <table class="table table-striped align-middle">
+      <thead>
       <tr>
-        <td><%= link_to product.name, product_path(product) %></td>
-        <td><%= quantity %></td>
-        <td><%= number_to_currency(product.price, unit: "₽") %></td>
-        <td><%= number_to_currency(product.price * quantity, unit: "₽") %></td>
-        <td>
-          <%= button_to "Удалить", remove_from_cart_path(product), method: :delete %>
-        </td>
+        <th>Товар</th>
+        <th>Количество</th>
+        <th>Цена</th>
+        <th></th>
       </tr>
-    <% end %>
-    </tbody>
-  </table>
-<% end %>
+      </thead>
+      <tbody>
+      <% @products.each do |product| %>
+        <tr>
+          <td>
+            <%= link_to product.name, product_path(product), class: "fw-semibold" %>
+          </td>
+          <td><%= @cart[product.id.to_s] %></td>
+          <td><%= number_to_currency(product.price * @cart[product.id.to_s], unit: "₽") %></td>
+          <td>
+            <%= button_to "Удалить", remove_from_cart_path(product), method: :delete, class: "btn btn-sm btn-danger" %>
+          </td>
+        </tr>
+      <% end %>
+      </tbody>
+    </table>
 
-<%= link_to "Продолжить покупки", root_path %>
-<% if @products.any? %>
-  <%= link_to "Оформить заказ", new_order_path, class: "button" %>
-<% end %>
+    <div class="text-end mt-4">
+      <%= link_to 'Оформить заказик <3', new_order_path, class: "btn btn-success" %>
+    </div>
+  <% end %>
+</div>
