--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,18 @@
-<h2>Forgot your password?</h2>
+<div class="container my-5" style="max-width: 500px;">
+  <h2 class="mb-4 text-center">🔐 Восстановление пароля</h2>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <p class="text-center">Введите email, который вы указывали при регистрации. Мы вышлем вам инструкции для сброса пароля.</p>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <%= form_with(model: resource, url: password_path(resource_name), local: true) do |f| %>
+    <div class="mb-3">
+      <%= f.label :email, "Email", class: "form-label" %>
+      <%= f.email_field :email, autofocus: true, class: "form-control", required: true %>
+    </div>
+
+    <%= f.submit "Отправить инструкции", class: "btn btn-primary w-100" %>
+  <% end %>
+
+  <div class="mt-3 text-center">
+    <%= link_to "Назад к входу", new_session_path(resource_name), class: "link-secondary" %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
