--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,25 @@
-<h2><%= @product.name %></h2>
-<p><%= number_to_currency(@product.price, unit: "₽") %></p>
-<p><%= @product.description %></p>
-<p><em>Категория: <%= @product.category&.name %></em></p>
+<div class="container my-5">
+  <div class="row">
+    <div class="col-md-6">
+      <% if @product.image.attached? %>
+        <%= image_tag @product.image, class: "img-fluid rounded shadow-sm", alt: @product.name %>
+      <% else %>
+        <div class="bg-secondary text-white d-flex align-items-center justify-content-center rounded" style="height: 300px;">
+          Нет изображения
+        </div>
+      <% end %>
+    </div>
 
-<%= link_to "Назад", root_path %>
+    <div class="col-md-6">
+      <h1><%= @product.name %></h1>
+      <p class="lead text-muted"><%= number_to_currency(@product.price, unit: "₽") %></p>
+      <p><%= @product.description %></p>
+
+      <% if user_signed_in? %>
+        <%= button_to 'Добавить в корзину', add_to_cart_path(@product), method: :post, class: "btn btn-success btn-lg mt-3" %>
+      <% else %>
+        <%= link_to 'Войдите, чтобы добавить в корзину', new_user_session_path, class: "btn btn-warning mt-3" %>
+      <% end %>
+    </div>
+  </div>
+</div>
