--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,25 @@
   <div class="container-fluid d-flex justify-content-between align-items-center">
     <a class="navbar-brand text-white" href="<%= root_path %>">EcommerceStore</a>
 
+
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const flash = document.querySelector(".flash-message");
+            if (flash) {
+                setTimeout(() => {
+                    flash.classList.remove("show"); // Bootstrap 5: убираем видимость
+                    flash.classList.add("fade");
+                }, 2000); // 3 секунды
+
+                // Удалить элемент из DOM (не обязательно)
+                setTimeout(() => {
+                    flash.remove();
+                }, 3000);
+            }
+        });
+    </script>
+
     <div class="d-flex align-items-center text-white">
       <% if user_signed_in? %>
         <span class="me-4">Привет, <%= current_user.name || current_user.email %>!</span>
