--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,17 @@
   <div class="container-fluid d-flex justify-content-between align-items-center">
     <a class="navbar-brand text-white" href="<%= root_path %>">EcommerceStore</a>
 
-
+    <% if flash[:delete_notice] %>
+      <div class="position-fixed top-50 start-50 translate-middle alert alert-success alert-dismissible fade show flash-message" role="alert" style="z-index: 1055; min-width: 300px;">
+        <%= flash[:delete_notice] %>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Закрыть"></button>
+      </div>
+    <% elsif flash[:delete_alert] %>
+      <div class="position-fixed top-50 start-50 translate-middle alert alert-danger alert-dismissible fade show flash-message" role="alert" style="z-index: 1055; min-width: 300px;">
+        <%= flash[:delete_alert] %>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Закрыть"></button>
+      </div>
+    <% end %>
 
     <script>
         document.addEventListener("DOMContentLoaded", function() {
